<resources>
    <string name="app_name">EstartaTask</string>
    <string name="date">Date</string>
    <string name="tap_to_select_date">tap to select date</string>
    <string name="conver_to_hijry">Convert to hijri</string>
    <string name="date_hijry">Date in hijri</string>
    <string name="add">Add</string>
    <string name="show">Show all events</string>
    <string name="loading">Loading...</string>
    <string name="updte">Update</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>