<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background_color"
        tools:context=".ui.main.MainActivity">

        <include layout="@layout/item_toolbar"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:textSize="@dimen/_12sdp"/>
                    <TextView
                        android:id="@+id/tv_select_date"
                        android:background="@drawable/rect_white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_5sdp"
                        android:textColor="@color/black"
                        android:text="@string/tap_to_select_date"
                        android:textStyle="bold"
                        android:textSize="@dimen/_10sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:gravity="center_horizontal"/>
                    <EditText
                        android:id="@+id/et_event_name"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/et_back"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:textColorHint="@color/black"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp"
                        android:hint="Please Enter Event Name"/>
                    <EditText
                        android:id="@+id/et_event_description"
                        android:textColorHint="@color/black"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/et_back"
                        android:layout_width="match_parent"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp"
                        android:layout_height="@dimen/_100sdp"
                        android:gravity="start|top"
                        android:hint="Please Enter Event Description"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"/>
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_convert"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@drawable/rect_white"
                    android:backgroundTint="@color/green_color"
                    android:text="@string/conver_to_hijry"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_10sdp"
                    />
                <LinearLayout
                    android:layout_marginTop="@dimen/_10sdp"
                    android:id="@+id/ln_hijry"
                    android:visibility="gone"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_hijry"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:textSize="@dimen/_12sdp"/>
                    <TextView
                        android:id="@+id/tv_date_hijry"
                        android:background="@drawable/rect_white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_5sdp"
                        android:textColor="@color/black"
                        android:text="hijry"
                        android:textStyle="bold"
                        android:textSize="@dimen/_10sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:gravity="center_horizontal"/>
                </LinearLayout>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_save"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@drawable/rect_white"
                    android:backgroundTint="@color/green_color"
                    android:text="@string/add"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_10sdp"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_update"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@drawable/rect_white"
                    android:backgroundTint="@color/green_color"
                    android:text="@string/updte"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_10sdp"
                    />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_show"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@drawable/rect_white"
                    android:backgroundTint="@color/green_color"
                    android:text="@string/show"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_10sdp"
                    />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </LinearLayout>
</layout>
